--- a/backend/templates/users/stats.html
+++ b/backend/templates/users/stats.html
@@ -242,7 +242,7 @@
                         <div class="col-md-3">
                             <div class="border-end pe-3">
                                 <h6 class="text-muted">数据统计时间</h6>
-                                <p class="mb-0">{{ moment().format('YYYY-MM-DD HH:mm:ss') }}</p>
+                                <p class="mb-0">{{ now.strftime('%Y-%m-%d %H:%M:%S') }}</p>
                             </div>
                         </div>
                         <div class="col-md-3">
